# dyret_simulation

./: .gitignore  README.md
dyret_description/: CMakeLists.txt  package.xml
dyret_description/launch/: description.launch  dyret.rviz  rviz.launch
dyret_description/meshes/: EXT2_OUTER.STL  EXT_MOTOR_LOWER.STL  EXT_MOTOR_UPPER.STL  EXT_OUTER.STL  FR08-H101.STL  MX-106T.STL  coxa_assembly.STL  femur_assembly.STL  xsens.STL
dyret_description/urdf/: body.urdf.xacro  dyret.urdf.xacro  dyret.xacro  ext_motor.urdf.xacro  imu.urdf.xacro  inertias.urdf.xacro  leg.urdf.xacro
dyret_description/urdf/joints/: foot.urdf.xacro  large_extend.urdf.xacro  mx106.urdf.xacro  mx64at.urdf.xacro  small_extend.urdf.xacro
dyret_gazebo/: CMakeLists.txt  package.xml
dyret_gazebo/cfg/: default_pose.yaml
dyret_gazebo/config/: dyret_control.yaml
dyret_gazebo/launch/: empty_world.launch  empy_world.launch  spawn_dyret.launch
dyret_gazebo_plugin/: CMakeLists.txt  package.xml
dyret_gazebo_plugin/include/dyret_gazebo_plugin/: controller.hpp  joint_control.hpp
dyret_gazebo_plugin/src/: controller.cpp  joint_control.cpp
dyret_simulation/: CMakeLists.txt  README.md  package.xml
