<?xml version="1.0"?>
<package format="2">
  <name>dyret_gazebo_plugin</name>
  <version>0.0.1</version>
  <description>Gazebo joint controller plugin for Dyret</description>

  <maintainer email="jorgehn@student.matnat.uio.no">jorgehn</maintainer>

  <license>MIT</license>


  <url type="website">https://github.uio.no/robin/dyret_simulation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dyret_common</depend>
  <depend>gazebo_dev</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
