<package format="2">
	<name>dyret_simulation</name>
	<version>0.1.0</version>
	<description>Metapackage for DyRET simulatior integration</description>
	<maintainer email="jorgehn@ifi.uio.no">Jørgen Nordmoen</maintainer>
	<license>GPL-3.0-or-later</license>

	<buildtool_depend>catkin</buildtool_depend>
	<exec_depend>dyret_description</exec_depend>
	<exec_depend>dyret_gazebo</exec_depend>
	<exec_depend>dyret_gazebo_plugin</exec_depend>

	<export>
		<metapackage />
	</export>
</package>
